--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,12 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/",
-            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+            "src": "/api/.*",
+            "dest": "/api/index.js"
+        },
+        {
+            "src": "/.*",
+            "dest": "/"
         }
     ]
 }
