again try to deploy with new vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
             "handle": "filesystem"
         },
         {
-            "src": "/api/.*",
-            "dest": "/api/index.js"
+            "src": "/api/.*\\.(js|ts)",
+            "dest": "/api/$1"
         },
         {
             "src": "/(.*)",
